--- a/frontend/views/paquetes/listarPaquetes.html
+++ b/frontend/views/paquetes/listarPaquetes.html
@@ -30,14 +30,16 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th scope="col">Codigo</th>
+                            <th scope="col" >Codigo</th>
                             <th scope="col">Descripcion</th>
                             <th scope="col">Destinatario</th>
-                            <th scope="col">direccion</th>
+                            <th scope="col">Direccion</th>
+                            <th scope="col">Provincia</th>
+                            <th scope="col">Codigo Provincia</th>
                             <th scope="col">Acciones</th>
                         </tr>
                     </thead>
-                    <tbody id="paquetes">
+                    <tbody id="paquetes" class="">
                     </tbody>
                 </table>
             </div>
